# alembic-offline

./: .travis.yml  CHANGES.rst  Makefile  README.rst  pyproject.toml  setup.py  tox.ini
alembic_offline/: __init__.py  api.py  commands.py  decorators.py  operations.py  script.py
tests/: conftest.py  test_commands.py  test_offline.py  test_online.py
tests/graph/: test_generate_migration_graph.py
tests/graph/migrations/: env.py
tests/graph/migrations/scripts/: script.py
tests/graph/migrations/versions/: base.py  simple.py
tests/migrations/scripts/: script.py
tests/migrations/versions/: base.py  not-generator.py  phase-mismatch.py  simple.py
