[project]
name = "alembic-offline"
version = "2.0.0"
authors = [
    { name="Paylogic International", email="developers@paylogic.com" },
    { name="Anatoly Bubenkov" }
]
description = "Offline extensions for alembic database migration framework"
readme = "README.rst"
requires-python = ">=3.4"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
Homepage = "https://github.com/paylogic/alembic-offline"
Issues = "https://github.com/paylogic/alembic-offline/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"